# rboy

./: Cargo.toml  flake.nix  plugin.lua
src/: cpu.rs  device.rs  keypad.rs  lib.rs  main.rs  mmu.rs  sound.rs
src/plugins/: perms.rs
strict_partial_ord_derive/: Cargo.toml
strict_partial_ord_derive/src/: lib.rs
strict_partial_ord_derive/tests/: lib.rs
